<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lAlarmGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_group"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/sAlarmGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/lAlarmTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_titel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/etAlarmTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1" >
    </EditText>

    <TextView
        android:id="@+id/lAlarmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/etAlarmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_weight="10"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/lAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alarm_adress"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:ems="10"
        android:inputType="textPostalAddress" >

    </EditText>

    <Button
        android:id="@+id/bAlarmCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_create"
        android:layout_weight="1" />

</LinearLayout>